[project]
name        = "hw"
version     = "0.1.0"
description = "prints hello world"


authors = [
    { name = "Hunter Matthews", email = "hunter@unix.haus" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",

    "Private :: Do Not Upload",
]
dependencies = [
]
readme = "README.md"
requires-python = ">=3.8"

[dependency-groups]
dev = []

[project.scripts]
hw = "hw.cli:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/hw",
]



